feat: add account reset api
